name:                adventofcode
version:             0.1.0.0
synopsis:            Small coding challenges
description:         Small coding challenges
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          greg@geekingfrog.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , pureMD5
                     , bytestring
                     , megaparsec
                     , vector
                     , unordered-containers
                     , hashable
                     , mtl
                     , transformers
                     , aeson
                     , scientific
                     , text
                     , KMP
                     , primes
  ghc-options: -O2
  other-modules: Day01
               , Day02
               , Day03
               , Day04
               , Day05
               , Day06
               , Day07
               , Day08
               , Day09
               , Day10
               , Day11
               , Day12
               , Day13
               , Day14
               , Day15
               , Day16
               , Day17
               , Day18
               , Day19
               , Day20
               , Day21
               , Day22
               , Day23
               , Day24
               , Day25
               , Tsp

