name:                adventofcode
version:             0.1.0.0
synopsis:            Small coding challenges
description:         Small coding challenges
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          greg@geekingfrog.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , pureMD5
                     , bytestring
                     , megaparsec
                     , vector
                     , unordered-containers
                     , hashable
                     , mtl
                     , transformers
                     , aeson
                     , scientific
                     , text
                     , KMP
                     , primes
  ghc-options: -O2
  other-modules: Y2016.Day01
               , Y2016.Day02
               , Y2016.Day03
               , Y2016.Day04
               , Y2016.Day05
               , Y2016.Day06
               , Y2016.Day07
               , Y2016.Day08
               , Y2016.Day09
               , Y2016.Day10
               , Y2016.Day11
               , Y2016.Day12
               , Y2016.Day13
               , Y2016.Day14
               , Y2016.Day15
               , Y2016.Day16
               , Y2016.Day17
               , Y2016.Day18
               , Y2016.Day19
               , Y2016.Day20
               , Y2016.Day21
               , Y2016.Day22
               , Y2016.Day23
               , Y2016.Day24
               , Y2016.Day25
               , Tsp

