name:                adventofcode
version:             0.1.0.0
synopsis:            Small coding challenges
description:         Small coding challenges
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          greg@geekingfrog.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , pureMD5
                     , bytestring
                     , megaparsec
                     , vector
                     , unordered-containers
                     , hashable
                     , mtl
                     , transformers
                     , aeson
                     , scientific
                     , text
                     , KMP
                     , primes
                     , containers >= 0.5.10
                     , cryptonite
                     , foldl
                     , monad-loops
                     , primitive
                     , array
                     , async
                     , stm
                     , stm-chans
                     , data-default

  ghc-options: -O2 -Wincomplete-patterns -threaded -with-rtsopts=-N -O2

  other-modules: Tsp
               , Y2015.Day01
               , Y2015.Day02
               , Y2015.Day03
               , Y2015.Day04
               , Y2015.Day05
               , Y2015.Day06
               , Y2015.Day07
               , Y2015.Day08
               , Y2015.Day09
               , Y2015.Day10
               , Y2015.Day11
               , Y2015.Day12
               , Y2015.Day13
               , Y2015.Day14
               , Y2015.Day15
               , Y2015.Day16
               , Y2015.Day17
               , Y2015.Day18
               , Y2015.Day19
               , Y2015.Day20
               , Y2015.Day21
               , Y2015.Day22
               , Y2015.Day23
               , Y2015.Day24
               , Y2015.Day25
               , Y2016.Day11
               , Y2016.Day15
               , Y2016.Day19
               , Y2017.Day01
               , Y2017.Day02
               , Y2017.Day03
               , Y2017.Day04
               , Y2017.Day05
               , Y2017.Day06
               , Y2017.Day07
               , Y2017.Day08
               , Y2017.Day09
               , Y2017.Day10
               , Y2017.Day11
               , Y2017.Day12
               , Y2017.Day13
               , Y2017.Day14
               , Y2017.Day15
               , Y2017.Day16
               , Y2017.Day17
               , Y2017.Day18
               , Y2017.Day19
               , Y2017.Day20
               , Y2017.Day21
               , Y2017.Day22
               , Y2017.Day23
               , Y2017.Day24
               , Y2017.Day25
